fixed selected icon alignment

--- a/react_webviews/src/freedom_plan/mini-components/mini-components.scss
+++ b/react_webviews/src/freedom_plan/mini-components/mini-components.scss
@@ -28,7 +28,7 @@
         width: 22px !important;
         height: 22px !important;
         top: -11px;
-        right: -2px;
+        right: -3px;
       }
 
       .fpo-name {
